<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/bottomMenu_profile" />
    <item
        android:id="@+id/nav_memories"
        android:icon="@drawable/ic_memories"
        android:title="@string/bottomMenu_memories" />
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_map"
        android:title="@string/bottomMenu_map" />
    <item
        android:id="@+id/nav_lists"
        android:icon="@drawable/ic_lists"
        android:title="@string/bottomMenu_list" />
    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_more"
        android:title="@string/bottomMenu_more" />
</menu>