<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <EditText
        android:id="@+id/etRegEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etRegPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/etRegConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_confirmPassword"
        android:inputType="textPassword"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvPasswordRequirements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_passwordRequirements"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/btnGoToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:layout_marginTop="16dp" />
</LinearLayout>
