<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/viewCache_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_cacheEdit"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:minWidth="48dp"
            android:minHeight="36dp">

            <ImageView
                android:id="@+id/cache_icon_image_view"
                android:layout_width="95dp"
                android:layout_height="82dp"
                android:src="@drawable/ic_cache_edit"
                android:contentDescription="@string/textView_cacheEdit"
                android:scaleType="fitStart"
                android:adjustViewBounds="true" />

            <EditText
                android:id="@+id/cacheName_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editText_cacheName"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:minWidth="48dp"
            android:minHeight="36dp">

            <TextView
                android:id="@+id/cacheDescription_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textView_cacheDescription"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:minWidth="48dp"
            android:minHeight="36dp">

            <EditText
                android:id="@+id/cacheDescription_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editText_cacheDescription"
                android:inputType="textMultiLine"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:minWidth="48dp"
            android:minHeight="36dp">

            <TextView
                android:id="@+id/points_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textView_userPoints"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/cachePoints_editText"
                android:minWidth="48dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/editText_cachePoints"
                android:textAlignment="center"
                android:inputType="numberSigned"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:minWidth="48dp"
            android:minHeight="36dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textView_pointsReceived"
                android:textAlignment="center"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:minWidth="48dp"
            android:minHeight="48dp">

            <Button
                android:id="@+id/saveCache_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_saveCache" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:minWidth="48dp"
            android:minHeight="48dp">

            <Button
                android:id="@+id/back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_back" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>