<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/more_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_profile"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="start"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:minWidth="48dp"
        android:minHeight="48dp">

        <ImageView
            android:id="@+id/user_profile_icon_image_view"
            android:layout_width="95dp"
            android:layout_height="82dp"
            android:src="@drawable/ic_user"
            android:contentDescription="@string/fragment_profile"
            android:scaleType="fitStart"
            android:adjustViewBounds="true" />


        <TextView
            android:id="@+id/username_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_username"
            android:textSize="24sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:minWidth="48dp"
        android:minHeight="48dp">

        <TextView
            android:id="@+id/register_date_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textView_userRegisterDate"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/register_date_display_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_userRegisterDateValue"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:minWidth="48dp"
        android:minHeight="48dp">

        <TextView
            android:id="@+id/points_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textView_userPoints"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/points_display_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:minWidth="48dp"
        android:minHeight="48dp">

        <TextView
            android:id="@+id/step_count_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textView_userSteps"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/step_count_display_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:minWidth="48dp"
        android:minHeight="48dp">

        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_logout" />
    </LinearLayout>

</LinearLayout>