<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/viewCache_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_cacheView"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:minWidth="48dp"
            android:minHeight="36dp">

            <ImageView
                android:id="@+id/cache_icon_image_view"
                android:layout_width="95dp"
                android:layout_height="82dp"
                android:src="@drawable/ic_cache_view"
                android:contentDescription="@string/textView_cacheView"
                android:scaleType="fitStart"
                android:adjustViewBounds="true" />

            <TextView
                android:id="@+id/cacheName_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_cacheName"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:minWidth="48dp"
            android:minHeight="36dp">

            <TextView
                android:id="@+id/cacheDescription_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textView_cacheDescription"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:minWidth="48dp"
            android:minHeight="36dp">

            <TextView
                android:id="@+id/cacheDescription_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lorem_ipsum"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:minWidth="48dp"
            android:minHeight="36dp">

            <TextView
                android:id="@+id/points_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textView_userPoints"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/points_display_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:minWidth="48dp"
            android:minHeight="36dp">

            <TextView
                android:id="@+id/cacheDate_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textView_cacheDate"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/cacheDate_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_userRegisterDateValue"
                android:textSize="18sp"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:minWidth="48dp"
            android:minHeight="36dp">

            <TextView
                android:id="@+id/cacheUsername_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textView_cacheAddedBy"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/cacheUsername_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[username]"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:minWidth="48dp"
            android:minHeight="48dp">

            <Button
                android:id="@+id/logCache_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_logCache" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:minWidth="48dp"
            android:minHeight="48dp">

            <Button
                android:id="@+id/back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_back" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>