<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/more_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottomMenu_memories"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="start" />

        <ImageView
            android:id="@+id/memories_icon_image_view"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:src="@drawable/ic_memories_background"
            android:contentDescription="@string/bottomMenu_memories"
            android:scaleType="fitStart"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:layout_margin="120dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:minWidth="48dp"
            android:minHeight="48dp">

            <Button
            android:id="@+id/cameraButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textView_camera"
            android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/galleryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textView_gallery"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>